--- a/docs/visual-basic/misc/bc30755.md
+++ b/docs/visual-basic/misc/bc30755.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30755
 ms.assetid: 95fb48c1-4982-45fc-81f0-f30cf0df173f
-ms.openlocfilehash: e121d3192dc700d46a53cc294522986f6d3db6ff
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: d679473b15012cb6f928ffb4da038bb45c176ef2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772082"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54502535"
 ---
-# <a name="goto-ltlabelnamegt-is-not-valid-because-ltlabelnamegt-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="b0694-102">' GoTo &lt;labelname&gt;' 올바르지 때문에 '&lt;labelname&gt;'는이 문을 포함 하지 않는 'SyncLock' 문 내부</span><span class="sxs-lookup"><span data-stu-id="b0694-102">'GoTo &lt;labelname&gt;' is not valid because '&lt;labelname&gt;' is inside a 'SyncLock' statement that does not contain this statement</span></span>
-<span data-ttu-id="b0694-103">`SyncLock` 블록으로 분기할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b0694-103">You cannot branch into a `SyncLock` block.</span></span>  
+# <a name="goto-ltlabelnamegt-is-not-valid-because-ltlabelnamegt-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="f0b1d-102">' GoTo &lt;labelname&gt;' 올바르지 때문에 '&lt;labelname&gt;'는이 문을 포함 하지 않는 'SyncLock' 문 내부</span><span class="sxs-lookup"><span data-stu-id="f0b1d-102">'GoTo &lt;labelname&gt;' is not valid because '&lt;labelname&gt;' is inside a 'SyncLock' statement that does not contain this statement</span></span>
+<span data-ttu-id="f0b1d-103">`SyncLock` 블록으로 분기할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f0b1d-103">You cannot branch into a `SyncLock` block.</span></span>  
   
- <span data-ttu-id="b0694-104">**오류 ID:** BC30755</span><span class="sxs-lookup"><span data-stu-id="b0694-104">**Error ID:** BC30755</span></span>  
+ <span data-ttu-id="f0b1d-104">**오류 ID:** BC30755</span><span class="sxs-lookup"><span data-stu-id="f0b1d-104">**Error ID:** BC30755</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b0694-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b0694-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f0b1d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f0b1d-105">To correct this error</span></span>  
   
--   <span data-ttu-id="b0694-106">레이블이 `SyncLock` 블록 앞에 오도록 코드 구조를 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="b0694-106">Restructure your code so that the label precedes the `SyncLock` block.</span></span>  
+-   <span data-ttu-id="f0b1d-106">레이블이 `SyncLock` 블록 앞에 오도록 코드 구조를 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="f0b1d-106">Restructure your code so that the label precedes the `SyncLock` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b0694-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b0694-107">See Also</span></span>  
- [<span data-ttu-id="b0694-108">SyncLock 문</span><span class="sxs-lookup"><span data-stu-id="b0694-108">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+## <a name="see-also"></a><span data-ttu-id="f0b1d-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="f0b1d-107">See also</span></span>
+- [<span data-ttu-id="f0b1d-108">SyncLock 문</span><span class="sxs-lookup"><span data-stu-id="f0b1d-108">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
