--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30702
 ms.assetid: c81a2d76-7065-437e-8fc8-84e8ad01c7c6
-ms.openlocfilehash: 043bcccbae1480543629ca97ea6d19f4570fc9c5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4e794fec04e4e9dc1c7717f3efbb2636cad9bb4c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772056"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54584011"
 ---
-# <a name="index-ltindexnumbergt-for-dimension-ltdimensionnumbergt-is-out-of-range"></a><span data-ttu-id="53aa7-102">인덱스 '&lt;indexnumber&gt;'' 차원에 대 한&lt;벗어났습니다&gt;' 범위를 벗어났습니다</span><span class="sxs-lookup"><span data-stu-id="53aa7-102">Index '&lt;indexnumber&gt;' for dimension '&lt;dimensionnumber&gt;' is out of range</span></span>
-<span data-ttu-id="53aa7-103">인덱스 중 하나가 정의된 범위를 초과했습니다.</span><span class="sxs-lookup"><span data-stu-id="53aa7-103">One of the indexes exceeds the range defined.</span></span>  
+# <a name="index-ltindexnumbergt-for-dimension-ltdimensionnumbergt-is-out-of-range"></a><span data-ttu-id="e8853-102">인덱스 '&lt;indexnumber&gt;'' 차원에 대 한&lt;벗어났습니다&gt;' 범위를 벗어났습니다</span><span class="sxs-lookup"><span data-stu-id="e8853-102">Index '&lt;indexnumber&gt;' for dimension '&lt;dimensionnumber&gt;' is out of range</span></span>
+<span data-ttu-id="e8853-103">인덱스 중 하나가 정의된 범위를 초과했습니다.</span><span class="sxs-lookup"><span data-stu-id="e8853-103">One of the indexes exceeds the range defined.</span></span>  
   
- <span data-ttu-id="53aa7-104">**오류 ID:** BC30702</span><span class="sxs-lookup"><span data-stu-id="53aa7-104">**Error ID:** BC30702</span></span>  
+ <span data-ttu-id="e8853-104">**오류 ID:** BC30702</span><span class="sxs-lookup"><span data-stu-id="e8853-104">**Error ID:** BC30702</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="53aa7-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="53aa7-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e8853-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e8853-105">To correct this error</span></span>  
   
--   <span data-ttu-id="53aa7-106">배열 범위를 초과하지 않도록 프로시저의 논리를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="53aa7-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
+-   <span data-ttu-id="e8853-106">배열 범위를 초과하지 않도록 프로시저의 논리를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="e8853-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
   
--   <span data-ttu-id="53aa7-107">광범위한 값을 허용하도록 배열을 다시 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="53aa7-107">Redefine the array to allow a wider range of values.</span></span>  
+-   <span data-ttu-id="e8853-107">광범위한 값을 허용하도록 배열을 다시 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="e8853-107">Redefine the array to allow a wider range of values.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="53aa7-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="53aa7-108">See Also</span></span>  
- [<span data-ttu-id="53aa7-109">배열 (C++)</span><span class="sxs-lookup"><span data-stu-id="53aa7-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+## <a name="see-also"></a><span data-ttu-id="e8853-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="e8853-108">See also</span></span>
+- [<span data-ttu-id="e8853-109">배열(C++)</span><span class="sxs-lookup"><span data-stu-id="e8853-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
