--- a/docs/visual-basic/misc/bc36626.md
+++ b/docs/visual-basic/misc/bc36626.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC36626
 ms.assetid: d8695228-85c7-432a-9979-0d9898035710
-ms.openlocfilehash: 5854f6829522e29629e83375392afdfddf8bbbaa
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 74e5f22417792c28c65983da6dcba916ec2b080e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775540"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54584089"
 ---
-# <a name="lambda-expression-cannot-be-converted-to-lttypenamegt-because-type-lttypenamegt-is-declared-mustinherit-and-cannot-be-created"></a><span data-ttu-id="96b12-102">람다 식을 변환할 수 없는 '&lt;typename&gt;' 때문에 형식 '&lt;typename&gt;' 'm'으로 선언 되어 및 만들 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="96b12-102">Lambda expression cannot be converted to '&lt;typename&gt;' because type '&lt;typename&gt;' is declared 'MustInherit' and cannot be created</span></span>
-<span data-ttu-id="96b12-103">문에서 기본 클래스로만 사용할 수 있고 인스턴스를 만드는 데 사용할 수 없는 형식으로 람다 식을 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="96b12-103">A statement attempts to convert a lambda expression to a type that can only be a base class and cannot be used to create an instance.</span></span>  
+# <a name="lambda-expression-cannot-be-converted-to-lttypenamegt-because-type-lttypenamegt-is-declared-mustinherit-and-cannot-be-created"></a><span data-ttu-id="948f7-102">람다 식을 변환할 수 없는 '&lt;typename&gt;' 때문에 형식 '&lt;typename&gt;' 'm'으로 선언 되어 및 만들 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="948f7-102">Lambda expression cannot be converted to '&lt;typename&gt;' because type '&lt;typename&gt;' is declared 'MustInherit' and cannot be created</span></span>
+<span data-ttu-id="948f7-103">문에서 기본 클래스로만 사용할 수 있고 인스턴스를 만드는 데 사용할 수 없는 형식으로 람다 식을 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="948f7-103">A statement attempts to convert a lambda expression to a type that can only be a base class and cannot be used to create an instance.</span></span>  
   
- <span data-ttu-id="96b12-104">**오류 ID:** BC36626</span><span class="sxs-lookup"><span data-stu-id="96b12-104">**Error ID:** BC36626</span></span>  
+ <span data-ttu-id="948f7-104">**오류 ID:** BC36626</span><span class="sxs-lookup"><span data-stu-id="948f7-104">**Error ID:** BC36626</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="96b12-105">참고 항목</span><span class="sxs-lookup"><span data-stu-id="96b12-105">See Also</span></span>  
- [<span data-ttu-id="96b12-106">람다 식</span><span class="sxs-lookup"><span data-stu-id="96b12-106">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)  
- [<span data-ttu-id="96b12-107">MustInherit</span><span class="sxs-lookup"><span data-stu-id="96b12-107">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)  
- [<span data-ttu-id="96b12-108">상속 기본 사항 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="96b12-108">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+## <a name="see-also"></a><span data-ttu-id="948f7-105">참고자료</span><span class="sxs-lookup"><span data-stu-id="948f7-105">See also</span></span>
+- [<span data-ttu-id="948f7-106">람다 식</span><span class="sxs-lookup"><span data-stu-id="948f7-106">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="948f7-107">MustInherit</span><span class="sxs-lookup"><span data-stu-id="948f7-107">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="948f7-108">상속 기본 사항(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="948f7-108">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
