--- a/docs/visual-basic/misc/bc30935.md
+++ b/docs/visual-basic/misc/bc30935.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30935
 ms.assetid: 1165b630-668d-417d-9e18-9b8ffe7f6980
-ms.openlocfilehash: c895583bae010a5137e99ac59f0d9d19c7c2aabb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a078f2e59120eb21395345058aab506918c2d505
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770562"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54632758"
 ---
 # <a name="member-ltclassnamegtltprocedurenamegt-that-matches-this-signature-cannot-be-overridden-because-the-class-ltclassnamegt-contains-multiple-members-with-this-same-name-and-signature-ltsignaturelistgt"></a>멤버 '&lt;classname&gt;.&lt; procedurename&gt;' 때문에이 시그니처를 재정의할 수 없는 일치 하는 클래스의&lt;classname&gt;' 이름과 서명이 같은 여러 멤버가 포함 되어: &lt;signaturelist&gt;
 프로시저 또는 속성이 상속된 프로시저 또는 속성을 재정의하려고 하지만, 컴파일러가 이름과 서명이 같은 기본 프로시저 또는 속성 버전을 둘 이상 찾았습니다.  
@@ -45,7 +45,7 @@ End Class
   
 -   사용하는 형식 인수 집합이 포함된 기본 클래스를 상속해야 하는 경우 이 오류 메시지에 언급된 프로시저 또는 속성을 재정의하지 마세요.  
   
-## <a name="see-also"></a>참고 항목  
- [재정의 가능](../../visual-basic/language-reference/modifiers/overridable.md)  
- [재정의](../../visual-basic/language-reference/modifiers/overrides.md)  
- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a>참고자료
+- [재정의 가능](../../visual-basic/language-reference/modifiers/overridable.md)
+- [재정의](../../visual-basic/language-reference/modifiers/overrides.md)
+- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
