--- a/docs/visual-basic/misc/bc31196.md
+++ b/docs/visual-basic/misc/bc31196.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31196
 ms.assetid: 36be5c92-dd6b-41d4-894a-2bd71d772092
-ms.openlocfilehash: f5a9fc4d7ec9b4ee67f758ff1572778d87c24ee1
-ms.sourcegitcommit: a885cc8c3e444ca6471348893d5373c6e9e49a47
+ms.openlocfilehash: b2274324b960b33f9dd7ace4d3d9f0599f79f330
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "44041644"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54631453"
 ---
 # <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a>XML 리터럴과 XML 축 속성은 이 어셈블리에서 사용되지 않으므로 이 디버깅 세션 중에 사용할 수 없습니다.
 XML 리터럴 또는 XML 축 속성에서 참조 되었습니다 합니다 **Watch** 또는 **직접 실행** in Visual Basic의 XML 기능 사용할 수 없는 디버깅 세션 중 창입니다. 이 경우 Visual Basic 기능에는 XML을 사용 하지 않습니다 또는 릴리스 빌드를 수행 하는 어셈블리에 대 한 합니다.  
@@ -23,8 +23,8 @@ XML 리터럴 또는 XML 축 속성에서 참조 되었습니다 합니다 **Wat
   
 -   어셈블리의 디버그 빌드를 사용하여 새 디버깅 세션을 시작합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic 응용 프로그램 디버깅](../../visual-basic/developing-apps/debugging.md)  
- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)  
- [XML 축 속성](../../visual-basic/language-reference/xml-axis/index.md)  
- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic 응용 프로그램 디버깅](../../visual-basic/developing-apps/debugging.md)
+- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)
+- [XML 축 속성](../../visual-basic/language-reference/xml-axis/index.md)
+- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
