--- a/docs/visual-basic/misc/bc32107.md
+++ b/docs/visual-basic/misc/bc32107.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32107
 ms.assetid: 218a7f0c-dd4f-4086-a52c-e8d581377e8b
-ms.openlocfilehash: 0c93651aa379fe569e675974886ebb10966277a3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 49bd566520d7d1c8c78f3e4fe9c6a9aadc0ab0c3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764646"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629776"
 ---
 # <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a>'Class' 제약 조건과 특정 클래스 형식 제약 조건은 함께 사용할 수 없습니다.
 제약 조건 목록에는 [클래스(Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건과 정의된 클래스의 이름이 함께 나옵니다.  
@@ -41,7 +41,7 @@ ms.locfileid: "53764646"
   
 -   형식 인수를 지정된 클래스 이름에서 상속하려는 경우에는 제약 조건 목록에서 `Class` 키워드를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목
+## <a name="see-also"></a>참고자료
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
 - [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
