--- a/docs/visual-basic/misc/bc36006.md
+++ b/docs/visual-basic/misc/bc36006.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36006
 ms.assetid: 4c4e991f-3839-4196-bcfb-eb8464aa55e5
-ms.openlocfilehash: 268250eec1e7fc6c33b5811536055956acb515b5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: aab4b51698dbb82badffa13cd2ea1c5e44e6da20
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775631"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634651"
 ---
 # <a name="attribute-constructor-has-a-byref-parameter-of-type-lttypenamegt-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a>특성 생성자에는 'ByRef' 매개 변수 형식 '&lt;typename&gt;'; 특성을 적용할 byref 매개 변수를 사용 하 여 생성자를 사용할 수 없습니다
 `ByRef` 매개 변수를 사용하는 특성 생성자를 통해 프로그래밍 요소에 특성을 적용했습니다.  
@@ -27,8 +27,8 @@ ms.locfileid: "53775631"
   
 -   `ByRef` 매개 변수를 사용하지 않는 생성자를 통해 특성을 적용하거나 특성을 적용하지 마세요.  
   
-## <a name="see-also"></a>참고 항목  
-   
-   
- [값 또는 참조로 인수 전달](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)  
- [ByRef](../../visual-basic/language-reference/modifiers/byref.md)
+## <a name="see-also"></a>참고자료
+
+
+- [값 또는 참조로 인수 전달](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [ByRef](../../visual-basic/language-reference/modifiers/byref.md)
