--- a/docs/visual-basic/misc/bc40024.md
+++ b/docs/visual-basic/misc/bc40024.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC40024
 ms.assetid: fab4f290-a41f-47d6-9bdb-44eb8dd395d5
-ms.openlocfilehash: 32905c50740d7b97ad9e127e9a76505de4eaec47
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3af117e6ab56f9baadbfe1e8af80c7112ac4999b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767753"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634547"
 ---
 # <a name="property-ltpropertynamegt-implicitly-declares-ltimplicitmembernamegt-which-conflicts-with-a-member-implicitly-declared-for-member-ltmembernamegt-in-the-base-class-ltbaseclassnamegt"></a>속성 '&lt;propertyname&gt;'을 암시적으로 선언'&lt;implicitmembername&gt;', 멤버에 대 한 암시적으로 선언 된 멤버와 충돌 하 는'&lt;membername&gt;' 자료에서 클래스&lt;baseclassname&gt;'
 멤버 '\<membername1 >'를 암시적으로 선언 '\<implicitmembername > ', 멤버에 대 한 암시적으로 선언 된 멤버와 충돌 하 는'\<membername2 >' 기본 클래스 '\<baseclassname >'입니다. 따라서 멤버를 'Overloads'로 선언할 수 없습니다.  
@@ -43,5 +43,5 @@ ms.locfileid: "53767753"
   
 -   암시적 기본 클래스 멤버를 숨기지 않으려면 위의 표에 나열된 이름과의 충돌을 피하기 위해 속성 이름을 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [선언 요소 이름](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+## <a name="see-also"></a>참고자료
+- [선언 요소 이름](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
