--- a/docs/visual-basic/misc/bc40054.md
+++ b/docs/visual-basic/misc/bc40054.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC40054
 ms.assetid: beac93b0-d427-4df6-9582-fd69c7a53673
-ms.openlocfilehash: ff7f287862d630312394244d2baaf642bce1e678
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8058b3c7c7cde07d291961b598f6a5e8e4040efa
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761825"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634053"
 ---
 # <a name="ltconstructorgt-in-designer-generated-type-lttypegt-should-call-initializecomponent-method"></a>'&lt;생성자&gt;'에 디자이너에서 생성 된 형식'&lt;형식&gt;' InitializeComponent 메서드를 호출 해야
 디자이너에서 생성한 형식의 생성자가 해당 형식의 `InitializeComponent` 메서드를 호출하지 않습니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53761825"
   
 -   생성자에서 `InitializeComponent` 메서드에 호출을 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- <xref:Microsoft.VisualBasic.CompilerServices.DesignerGeneratedAttribute>  
- [생성자(C++)](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a>참고자료
+- <xref:Microsoft.VisualBasic.CompilerServices.DesignerGeneratedAttribute>
+- [생성자](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
