--- a/docs/visual-basic/misc/bc30550.md
+++ b/docs/visual-basic/misc/bc30550.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30550
 ms.assetid: 982a767d-9174-408e-bdcf-ae0d96f88cef
-ms.openlocfilehash: 9d42fe44e06689d344ad335385c1b0d5aaa7e893
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 9edc1893568cdd943787be84e529f056d43796d4
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33608942"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54600468"
 ---
 # <a name="constructors-cannot-implement-interface-methods"></a>생성자는 인터페이스 메서드를 구현할 수 없습니다.
 `New` 키워드를 사용하여 잘못된 인터페이스 메서드를 구현하려고 했습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "33608942"
   
 -   `Implements` 키워드를 사용하여 인터페이스를 구현합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)  
- 
+## <a name="see-also"></a>참고자료
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+
