--- a/docs/visual-basic/misc/bc30550.md
+++ b/docs/visual-basic/misc/bc30550.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30550
 ms.assetid: 982a767d-9174-408e-bdcf-ae0d96f88cef
-ms.openlocfilehash: 9d42fe44e06689d344ad335385c1b0d5aaa7e893
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 9edc1893568cdd943787be84e529f056d43796d4
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33608942"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54600468"
 ---
-# <a name="constructors-cannot-implement-interface-methods"></a><span data-ttu-id="d68b2-102">생성자는 인터페이스 메서드를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d68b2-102">Constructors cannot implement interface methods</span></span>
-<span data-ttu-id="d68b2-103">`New` 키워드를 사용하여 잘못된 인터페이스 메서드를 구현하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="d68b2-103">You have attempted to use the `New` keyword to implement an interface method, which is not valid.</span></span>  
+# <a name="constructors-cannot-implement-interface-methods"></a><span data-ttu-id="25246-102">생성자는 인터페이스 메서드를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="25246-102">Constructors cannot implement interface methods</span></span>
+<span data-ttu-id="25246-103">`New` 키워드를 사용하여 잘못된 인터페이스 메서드를 구현하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="25246-103">You have attempted to use the `New` keyword to implement an interface method, which is not valid.</span></span>  
   
- <span data-ttu-id="d68b2-104">**오류 ID:** BC30550</span><span class="sxs-lookup"><span data-stu-id="d68b2-104">**Error ID:** BC30550</span></span>  
+ <span data-ttu-id="25246-104">**오류 ID:** BC30550</span><span class="sxs-lookup"><span data-stu-id="25246-104">**Error ID:** BC30550</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d68b2-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d68b2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="25246-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="25246-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d68b2-106">`Implements` 키워드를 사용하여 인터페이스를 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="d68b2-106">Implement interfaces with the `Implements` keyword.</span></span>  
+-   <span data-ttu-id="25246-106">`Implements` 키워드를 사용하여 인터페이스를 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="25246-106">Implement interfaces with the `Implements` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d68b2-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d68b2-107">See Also</span></span>  
- [<span data-ttu-id="d68b2-108">Implements 문</span><span class="sxs-lookup"><span data-stu-id="d68b2-108">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
- 
+## <a name="see-also"></a><span data-ttu-id="25246-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="25246-107">See also</span></span>
+- [<span data-ttu-id="25246-108">Implements 문</span><span class="sxs-lookup"><span data-stu-id="25246-108">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+
